--- a/k8s/secret.yml
+++ b/k8s/secret.yml
@@ -5,4 +5,4 @@ metadata:
   namespace: attendencenamespace
 type: Opaque
 stringData:
-  DB_URL: "mongodb+srv://user:password@cluster.mongodb.net/attendence_db"
+  DB_URL: "mongodb+srv://shahryar:qUTKMSlkk0Xuhlq0@cluster0.72le5.mongodb.net/?appName=Cluster0"
