--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-fastapi==0.115.0
-uvicorn==0.32.0
-pymongo==4.10.1
-pydantic[email]==2.9.2
-python-dotenv==1.0.1
-bcrypt==4.2.0
-pyjwt==2.9.0
+fastapi
+uvicorn
+pymongo
+pydantic[email]
+python-dotenv
+bcrypt
+pyjwt
